# sys_info

./: .gitignore  Cargo.toml  Makefile  READme.md  main.s  start.asm  start.elf
backend/: Cargo.toml
backend/src/: server.rs
site/: Cargo.toml  index.html  package.json  pnpm-lock.yaml  tailwind.css
site/src/: App.svelte  main.rs
site/src/active_components/: input.rs  progress.rs  table.rs
site/src/passive_components/: list.rs  loading.rs
src/: aarch  arm  distros.rs  main.c  main.rs  start.asm  tui.rs
src/system/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs  user.rs  utils.rs
src/system/linux/: memory.rs  system.rs
src/tui_logic/: main.rs  mod.rs  ui.rs
src/tui_logic/widgets/: mod.rs
