[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"


[[bin]]
name = "server"
path = "src/server.rs"


[[bin]]
name = "tui"
path = "src/tui.rs"


[dependencies]
actix-web = "4.3.1"